--- a/notebooks/amazon_sales.ipynb
+++ b/notebooks/amazon_sales.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "f4b501ef",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "5e5557b5",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "fc9b0169",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "94fb0d08",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
        "[50000 rows x 13 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,12 +327,12 @@
    "id": "c9b2a704",
    "metadata": {},
    "source": [
-    "## 매출량에 할인이 영향이 있는가?"
+    "## 1.매출량에 할인이 영향이 있는가?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "c4167d9f",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "e667f40b",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "8a17e6d0",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "ad45664e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "b7273928",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "71649567",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
        "11          Sports  2023  4073  2684767.93  0.133747"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,27 +546,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "id": "be932570",
    "metadata": {},
    "outputs": [],
    "source": [
     "pivot = category_year.pivot(index='카테고리', columns='year')\n",
     "\n",
-    "pivot['주문 성장율'] = round((\n",
+    "pivot['주문 성장률'] = round((\n",
     "    (pivot['주문량'][2023] - pivot['주문량'][2022])/ pivot['주문량'][2022] * 100),2)\n",
     "\n",
-    "pivot['매출 성장율'] = round((\n",
+    "pivot['매출 성장률'] = round((\n",
     "    (pivot['판매금액'][2023] - pivot['판매금액'][2022])/ pivot['판매금액'][2022] * 100),2)\n",
     "\n",
     "pivot['할인율 변화'] = (pivot['평균할인율'][2023]- pivot['평균할인율'][2022]) * 100\n",
     "\n",
-    "result = pivot[['주문 성장율','매출 성장율','할인율 변화']].reset_index()"
+    "result = pivot[['주문 성장률','매출 성장률','할인율 변화']].reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "ae62404b",
    "metadata": {},
    "outputs": [
@@ -592,8 +592,8 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>카테고리</th>\n",
-       "      <th>주문 성장율</th>\n",
-       "      <th>매출 성장율</th>\n",
+       "      <th>주문 성장률</th>\n",
+       "      <th>매출 성장률</th>\n",
        "      <th>할인율 변화</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -652,7 +652,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                카테고리 주문 성장율 매출 성장율    할인율 변화\n",
+       "                카테고리 주문 성장률 매출 성장률    할인율 변화\n",
        "year                                        \n",
        "0             Beauty   2.75   2.83 -0.008915\n",
        "1              Books   0.22   1.70  0.024010\n",
@@ -662,7 +662,7 @@
        "5             Sports  -2.84  -1.38 -0.062838"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,19 +673,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "b5f19bef",
    "metadata": {},
    "outputs": [],
    "source": [
     "#스피어만 상관계수\n",
-    "corr_orders = spearmanr(result['할인율 변화'], result['주문 성장율'])\n",
-    "corr_revenue = spearmanr(result['할인율 변화'], result['매출 성장율'])"
+    "corr_orders = spearmanr(result['할인율 변화'], result['주문 성장률'])\n",
+    "corr_revenue = spearmanr(result['할인율 변화'], result['매출 성장률'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "id": "cd500d0d",
    "metadata": {},
    "outputs": [
@@ -722,12 +722,12 @@
    "id": "3523fd05",
    "metadata": {},
    "source": [
-    "## 카테고리별로 매출량에 영향을 준 것은 무엇일까?"
+    "## 2.카테고리별로 매출 성장 구조 분석"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d5d8423d",
    "metadata": {},
    "outputs": [],
@@ -739,32 +739,32 @@
     "    주문량=('order_id','count')\n",
     ").reset_index()\n",
     "\n",
-    "cat_year['평균주문금액'] = cat_year['판매량'] / cat_year['주문량']\n",
+    "cat_year['객단가'] = cat_year['판매량'] / cat_year['주문량']\n",
     "cat_year = cat_year.rename(columns={'product_category':'카테고리'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "baa6de56",
    "metadata": {},
    "outputs": [],
    "source": [
     "pivot_1 = cat_year.pivot(index='카테고리', columns='year')\n",
     "\n",
-    "pivot_1['주문 성장율'] = round((\n",
+    "pivot_1['주문 성장률'] = round((\n",
     "    (pivot_1['주문량'][2023] - pivot_1['주문량'][2022]) / pivot_1['주문량'][2022] * 100),2)\n",
-    "pivot_1['매출 성장율'] = round((\n",
+    "pivot_1['매출 성장률'] = round((\n",
     "    (pivot_1['판매량'][2023] - pivot_1['판매량'][2022]) / pivot_1['판매량'][2022] * 100),2)\n",
     "\n",
-    "pivot_1['주문금액 차이'] = (pivot_1['평균주문금액'][2023] - pivot_1['평균주문금액'][2022]) / pivot_1['평균주문금액'][2022] * 100\n",
+    "pivot_1['객단가 차이'] = (pivot_1['객단가'][2023] - pivot_1['객단가'][2022]) / pivot_1['객단가'][2022] * 100\n",
     "\n",
-    "result_1 = pivot_1[['주문 성장율','매출 성장율','주문금액 차이']].reset_index()"
+    "result_1 = pivot_1[['주문 성장률','매출 성장률','객단가 차이']].reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "id": "c03e850a",
    "metadata": {},
    "outputs": [
@@ -790,9 +790,9 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <th>카테고리</th>\n",
-       "      <th>주문 성장율</th>\n",
-       "      <th>매출 성장율</th>\n",
-       "      <th>주문금액 차이</th>\n",
+       "      <th>주문 성장률</th>\n",
+       "      <th>매출 성장률</th>\n",
+       "      <th>객단가 차이</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
@@ -850,7 +850,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                카테고리 주문 성장율 매출 성장율   주문금액 차이\n",
+       "                카테고리 주문 성장률 매출 성장률    객단가 차이\n",
        "year                                        \n",
        "0             Beauty   2.75   2.83  0.075493\n",
        "1              Books   0.22   1.70  1.482424\n",
@@ -860,7 +860,7 @@
        "5             Sports  -2.84  -1.38  1.496449"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
